# Coursify

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/models/: mcq_question.py  schema.py  theory.py  theory_question.py
backend/routers/: questions.py  ref.py  theory.py  users.py
backend/utils/: get_book_links.py  get_mcq.py  get_questions.py  get_theory.py  get_theory_question.py  get_ytlinks.py
