[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
